--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,9 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
+dependencies = ["psychopy"]
 
 [project.urls]
-Homepage = "https://github.com/pypa/sampleproject"
-Issues = "https://github.com/pypa/sampleproject/issues"
+Homepage = "https://github.com/OleBialas/posner_task"
+Issues = "https://github.com/OleBialas/posner_task/issues"
+
