--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,9 @@
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
+[project.scripts]
+posner = "posner.experiment:main_cli"
+
 [project]
 name = "posner"
 version = "0.0.1"
