--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project.scripts]
-posner = "posner.experiment:main"
+posner = "posner.experiment:main_cli"
 
 [project]
 name = "posner"
