--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ authors = [
 ]
 description = "Psychopy implementation of the Posner attention cueing task."
 readme = "README.md"
-requires-python = ">=3.8,<3.9"
+requires-python = ">=3.8,!=3.9.*,<3.11"
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
