--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,6 +29,7 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest
         python -m pip install psychopy
+        python -m pip install git+https://github.com/OleBialas/posner_task.git
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
