--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,11 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
-dependencies = ["psychopy"]
+dependencies = [
+    "psychopy",
+    "pydantic",
+    "watchdog",
+    "pandas"]
 
 [project.urls]
 Homepage = "https://github.com/OleBialas/posner_task"
